fixed width on mobile for project imgs

--- a/style.css
+++ b/style.css
@@ -424,6 +424,9 @@ main {
             width: 80%; /* Adjusted width */
             margin-bottom: 20px; /* Adjusted margin */
         }
+        #my-img0, #my-img1 {
+            width: 80%;
+        }
 
 
         /* Typewriter effect */
